// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all render props 1`] = `
<div
  className="flow-modeler"
  style={
    Object {
      "gridTemplateColumns": "repeat(8, max-content)",
    }
  }
>
  <Component
    colStartIndex={1}
    key="1-1"
    rowStartIndex={3}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={2}
    key="2-1"
    rowStartIndex={3}
  >
    <Component>
      First Node
    </Component>
  </Component>
  <Component
    colStartIndex={3}
    key="3-1"
    rowStartIndex={3}
  >
    <Component>
      <label>
        Alternatives
      </label>
    </Component>
  </Component>
  <Component
    colStartIndex={4}
    key="4-1"
    rowStartIndex={1}
  >
    <Component
      connectionType={1}
    >
      <span>
        Stop Here
      </span>
    </Component>
  </Component>
  <Component
    colEndIndex={8}
    colStartIndex={5}
    key="5-1"
    rowStartIndex={1}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={8}
    key="8-1"
    rowStartIndex={1}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={4}
    key="4-2"
    rowStartIndex={2}
  >
    <Component
      connectionType={2}
    >
      <span>
        Continue
      </span>
    </Component>
  </Component>
  <Component
    colStartIndex={5}
    key="5-2"
    rowStartIndex={2}
  >
    <Component>
      Second Node
    </Component>
  </Component>
  <Component
    colEndIndex={7}
    colStartIndex={6}
    key="6-2"
    rowStartIndex={2}
  >
    <Component
      connectionType={1}
    />
  </Component>
  <Component
    colStartIndex={7}
    key="7-2"
    rowStartIndex={3}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={8}
    key="8-2"
    rowStartIndex={3}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={4}
    key="4-3"
    rowStartIndex={3}
  >
    <Component
      connectionType={3}
    >
      <span>
        Unless it is already done
      </span>
    </Component>
  </Component>
  <Component
    colEndIndex={7}
    colStartIndex={5}
    key="5-3"
    rowStartIndex={3}
  >
    <Component
      connectionType={3}
    />
  </Component>
</div>
`;

exports[`renders correctly with minimal/default props 1`] = `
<div
  className="flow-modeler"
  style={
    Object {
      "gridTemplateColumns": "repeat(8, max-content)",
    }
  }
>
  <Component
    colStartIndex={1}
    key="1-1"
    rowEndIndex={4}
    rowStartIndex={1}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={2}
    key="2-1"
    rowEndIndex={4}
    rowStartIndex={1}
  >
    <Component>
      First Node
    </Component>
  </Component>
  <Component
    colStartIndex={3}
    key="3-1"
    rowEndIndex={4}
    rowStartIndex={1}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={4}
    key="4-1"
    rowEndIndex={2}
    rowStartIndex={1}
  >
    <Component
      connectionType={1}
    />
  </Component>
  <Component
    colEndIndex={8}
    colStartIndex={5}
    key="5-1"
    rowEndIndex={2}
    rowStartIndex={1}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={8}
    key="8-1"
    rowEndIndex={2}
    rowStartIndex={1}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={4}
    key="4-2"
    rowEndIndex={3}
    rowStartIndex={2}
  >
    <Component
      connectionType={2}
    />
  </Component>
  <Component
    colStartIndex={5}
    key="5-2"
    rowEndIndex={3}
    rowStartIndex={2}
  >
    <Component>
      Second Node
    </Component>
  </Component>
  <Component
    colEndIndex={7}
    colStartIndex={6}
    key="6-2"
    rowEndIndex={3}
    rowStartIndex={2}
  >
    <Component
      connectionType={1}
    />
  </Component>
  <Component
    colStartIndex={7}
    key="7-2"
    rowEndIndex={4}
    rowStartIndex={2}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={8}
    key="8-2"
    rowEndIndex={4}
    rowStartIndex={2}
  >
    <Component />
  </Component>
  <Component
    colStartIndex={4}
    key="4-3"
    rowEndIndex={4}
    rowStartIndex={3}
  >
    <Component
      connectionType={3}
    />
  </Component>
  <Component
    colEndIndex={7}
    colStartIndex={5}
    key="5-3"
    rowEndIndex={4}
    rowStartIndex={3}
  >
    <Component
      connectionType={3}
    />
  </Component>
</div>
`;
